[gd_scene load_steps=13 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.294118, 0.498039, 0.235294, 1 )

[sub_resource type="CylinderMesh" id=10]

[sub_resource type="PrismMesh" id=11]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.76394, 0.638326, 1.99445 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1.5, 1, 2 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.243137, 0.243137, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 1.5, 0.5, 4 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.243137, 0.243137, 1 )

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.3
bottom_radius = 0.3
height = 0.2

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0, 0, 1 )

[node name="Level" type="Spatial"]

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.689453, -29.8954 )
mesh = SubResource( 10 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Ground"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -28.4556, 1.00293, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="Car" type="KinematicBody" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.651143, 0 )
shape = SubResource( 3 )

[node name="CarParts" type="MeshInstance" parent="Car"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781382, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CarParts2" type="MeshInstance" parent="Car/CarParts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.26661, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Wheel" type="MeshInstance" parent="Car/CarParts"]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, 0.677879, -0.49733, 1.01517 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Wheel3" type="MeshInstance" parent="Car/CarParts"]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, -0.69106, -0.49733, 1.01517 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Wheel2" type="MeshInstance" parent="Car/CarParts"]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, 0.677879, -0.49733, -0.999787 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Wheel4" type="MeshInstance" parent="Car/CarParts"]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, -0.69106, -0.49733, -0.999787 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Camera" type="Camera" parent="Car"]
transform = Transform( 1, 0, 0, 0, 0.856566, 0.516037, 0, -0.516037, 0.856566, 0, 5.30889, 7.51791 )

[node name="UIControl" type="Control" parent="Car/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RightButton" type="Button" parent="Car/Camera/UIControl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -20.0
margin_right = -100.0
margin_bottom = 20.0
text = "Right"

[node name="LeftButton" type="Button" parent="Car/Camera/UIControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -20.0
margin_right = 190.0
margin_bottom = 20.0
text = "Left"

[node name="ButtonTimer" type="Timer" parent="Car/Camera/UIControl"]
one_shot = true

[connection signal="pressed" from="Car/Camera/UIControl/RightButton" to="Car" method="_on_RightButton_pressed"]
[connection signal="pressed" from="Car/Camera/UIControl/LeftButton" to="Car" method="_on_LeftButton_pressed"]
[connection signal="timeout" from="Car/Camera/UIControl/ButtonTimer" to="Car" method="_on_ButtonTimer_timeout"]
